doc/demo/11/demo_ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-space
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: app-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
        - image: kodekloud/ecommerce:404
          name: default-backend
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-svc
  namespace: app-space
spec:
  ports:
    - port: 8888
      targetPort: 8080
  selector:
    app: default-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-wear
  namespace: app-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-wear
  template:
    metadata:
      labels:
        app: webapp-wear
    spec:
      containers:
        - image: kodekloud/ecommerce:apparels
          name: webapp-wear
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-wear-svc
  namespace: app-space
spec:
  ports:
    - port: 8888
      targetPort: 8080
  selector:
    app: webapp-wear
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-watch
  namespace: app-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-watch
  template:
    metadata:
      labels:
        app: webapp-watch
    spec:
      containers:
        - image: kodekloud/ecommerce:video
          name: webapp-watch
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-watch-svc
  namespace: app-space
spec:
  ports:
    - port: 8888
      targetPort: 8080
  selector:
    app: webapp-watch
  type: ClusterIP
