doc/demo/11/demo_netpol.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-demo
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: netpol-demo
  labels:
    app: frontend
spec:
  containers:
    - image: nginx
      name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: netpol-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
  type: ClusterIP

---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: netpol-demo
  labels:
    app: backend
spec:
  containers:
    - image: nginx
      name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: netpol-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: backend
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: database
  namespace: netpol-demo
  labels:
    app: database
spec:
  containers:
    - image: nginx
      name: database
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: netpol-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: database
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: netpol-demo
  labels:
    app: test
spec:
  containers:
    - image: nginx
      name: test
